some styling added

--- a/weather_map.html
+++ b/weather_map.html
@@ -156,7 +156,7 @@
             /*background-opacity: .5%;*/
             /*background-color: #f3c8a4;*/
             /*background-color: #f1bfa4;*/
-            background-color: #f7dda4;
+            background-color: #f4d2a4;
         }
 
         .header-purple {
@@ -262,7 +262,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #f3caa4;
+            background-color: #f0bda4;
             -webkit-transition: .4s;
             transition: .4s;
         }
