--- a/weather_map.html
+++ b/weather_map.html
@@ -2,25 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-<!--    fontawesomee-->
-    <script src="https://kit.fontawesome.com/376cc6886e.js" crossorigin="anonymous"></script>
+    <title>Weather Map</title>
     <!-- Mapbox CSS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet'/>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="weather-map.css">
-
 </head>
 <body class="body-bg-red">
 
-
-<!--<div class="dark-overlay"></div>-->
-
-<!--<div class="background"></div>-->
-<!--header-->
-
+<!----------- NAVBAR --------->
 <div class="d-flex justify-content-between px-4 py-2 header-red" id="header">
     <div class="d-flex align-items-center">
         <h2 class="my-0 mx-2">Weather Map</h2>
@@ -42,14 +35,9 @@
         <i class="fa-solid fa-location-dot"></i>
     </div>
     </div>
-
 </div>
 
-<!--<div class="main">-->
-<!--    <div class="row">-->
-<!--<div class="d-flex justify-content-center">-->
-<!--&lt;!&ndash;<h3 id="location" class="my-2">Kuna <i class="fa-solid fa-location-dot"></i></h3>&ndash;&gt;-->
-<!--</div>-->
+<!----------- CARD FORECAST CONTAINER ------------->
 <div class="forecast-container d-flex mb-3">
     <div id="card-one" class="forecasts flex-grow-1">
         <div></div>
@@ -67,16 +55,15 @@
         <div></div>
     </div>
 </div>
-<!--    </div>-->
 
 
-
-<!--<div class="row">-->
+<!----------- MAP CONTAINER ---------->
 <div id="map"></div>
-<!--</div>-->
-</div>
 
 
+<!---------------- SCRIPTS ----------------->
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/376cc6886e.js" crossorigin="anonymous"></script>
 <!--Jquery-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -84,14 +71,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<!--geocode-->
+<!--Geocode-->
 <script src="js/mapbox-geocoder-utils.js"></script>
-<!--access keys-->
+<!--Access keys-->
 <script src="js/keys.js"></script>
-<!--mapbox-->
+<!--Mapbox-->
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 <!--NORMAL JS-->
 <script src="js/weather_map.js"></script>
-
 </body>
 </html>
