--- a/weather_map.html
+++ b/weather_map.html
@@ -27,18 +27,18 @@
     </div>
     <div class="d-flex">
     <div class="d-flex align-items-center search">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" id="search" class="search-red" placeholder="Search for Location">
+        <i class="fa-solid fa-magnifying-glass mx-2"></i>
+        <input type="text" id="search" class="search-red me-4" placeholder="Search for Location">
     </div>
     <div class="d-flex align-items-center">
-        <h4 id="location"></h4>
-        <i class="fa-solid fa-location-dot"></i>
+        <h4 id="location" class="m-0"></h4>
+        <i class="fa-solid fa-location-dot mx-2"></i>
     </div>
     </div>
 </div>
 
 <!----------- CARD FORECAST CONTAINER ------------->
-<div class="forecast-container d-flex mb-3">
+<div class="d-flex mb-3 overflow-auto">
     <div id="card-one" class="forecasts flex-grow-1">
         <div></div>
     </div>
