--- a/weather_map.html
+++ b/weather_map.html
@@ -11,10 +11,10 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="weather-map.css">
 </head>
-<body class="body-bg-red">
+<body class="body-bg-purple">
 
 <!----------- NAVBAR --------->
-<div class="d-flex justify-content-between px-4 py-2 header-red" id="header">
+<div class="d-flex justify-content-between px-4 py-2 header-purple" id="header">
     <div class="d-flex align-items-center">
         <h2 class="my-0 mx-2">Weather Map</h2>
         <div id="toggle" class="d-flex align-items-center">
@@ -28,7 +28,7 @@
     <div class="d-flex">
     <div class="d-flex align-items-center search">
         <i class="fa-solid fa-magnifying-glass mx-2"></i>
-        <input type="text" id="search" class="search-red me-4" placeholder="Search for Location">
+        <input type="text" id="search" class="search-purple me-4" placeholder="Search for Location">
     </div>
     <div class="d-flex align-items-center">
         <h4 id="location" class="m-0"></h4>
