--- a/weather_map.html
+++ b/weather_map.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="weather-map.css">
+    <link rel="stylesheet" href="css/weather-map.css">
 </head>
 <body class="body-bg-purple">
 
